<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvNomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="6dp"
            app:layout_constraintBottom_toTopOf="@+id/edNomeProduto"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias=".1"
            app:layout_constraintVertical_chainStyle="packed">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/nome_produto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edNomeProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/tvCategoria"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNomeProduto">

            <EditText
                android:id="@+id/novoProduto_Nome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCategoria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/spNovoProduto"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edNomeProduto">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categoria"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/spNovoProduto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/tvPreco"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoria">

            <Spinner
                android:id="@+id/novoProduto_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvPreco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/etPreco"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spNovoProduto">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preco_prod"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPreco"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/tvQuantidade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPreco">

            <EditText
                android:id="@+id/novoProduto_Preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/npQuantidade"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPreco">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/novo_produto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="serif" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/npQuantidade"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="@+id/btnAdd"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuantidade">

            <NumberPicker
                android:id="@+id/novoProduto_Qtd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/btnAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/npQuantidade">

            <Button
                android:id="@+id/novoProduto_btnAdiciona"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:text="@string/add_produto" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>